# product-query-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: agents.py  graph.py  main.py
app/core/: config.py  logger.py  models.py
data/: product_description.csv
scripts/: ingest.py
tests/: conftest.py  test_api_basic.py  test_prompt_unit.py  test_retrieval_unit.py
