[project]
name = "product-query-bot"
version = "1.0.0"
description = "RAG-based multi-agent system for product queries"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.10.0",
    "langgraph>=0.6.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langchain-chroma>=0.2.5",
    "langmem>=0.0.29",
    "chromadb>=1.0.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]