[project]
name = "product-query-bot"
version = "1.0.0"
description = "RAG-based multi-agent system for product queries"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.10.0",
    "langgraph>=0.6.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.6",
    "langchain-chroma>=0.2.5",
    "langmem>=0.0.29",
    "chromadb>=1.0.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pandas-stubs>=2.0.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

